--- a/spire/bar-spire.yaml
+++ b/spire/bar-spire.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -24,7 +23,7 @@ spec:
 
   # Declare support for ephemeral volumes only.
   volumeLifecycleModes:
-    - Ephemeral
+  - Ephemeral
 
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -52,14 +51,10 @@ spec:
         description: SpiffeID is the Schema for the spiffeid API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
           metadata:
             type: object
@@ -129,9 +124,7 @@ spec:
             description: SpiffeIDStatus defines the observed state of SpiffeID
             properties:
               entryId:
-                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
-                  of cluster Important: Run "make" to regenerate code after modifying
-                  this file'
+                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state of cluster Important: Run "make" to regenerate code after modifying this file'
                 type: string
             type: object
         type: object
@@ -161,15 +154,15 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: spire-server-trust-role
 rules:
-  - apiGroups: ["authentication.k8s.io"]
-    resources: ["tokenreviews"]
-    verbs: ["create"]
-  - apiGroups: [""]
-    resources: ["configmaps"]
-    verbs: ["patch", "get", "list"]
-  - apiGroups: ["cert-manager.io"]
-    resources: ["certificates", "certificaterequests", "issuers"]
-    verbs: ["*"]
+- apiGroups: ["authentication.k8s.io"]
+  resources: ["tokenreviews"]
+  verbs: ["create"]
+- apiGroups: [""]
+  resources: ["configmaps"]
+  verbs: ["patch", "get", "list"]
+- apiGroups: ["cert-manager.io"]
+  resources: ["certificates", "certificaterequests", "issuers"]
+  verbs: ["*"]
 
 ---
 # Binds above cluster role to spire-server service account
@@ -178,9 +171,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: spire-server-trust-role-binding
 subjects:
-  - kind: ServiceAccount
-    name: spire-server
-    namespace: spire
+- kind: ServiceAccount
+  name: spire-server
+  namespace: spire
 roleRef:
   kind: ClusterRole
   name: spire-server-trust-role
@@ -196,7 +189,7 @@ data:
   k8s-workload-registrar.conf: |
     trust_domain = "bar.com"
     server_socket_path = "/run/spire/sockets/server.sock"
-    cluster = "bar-eks-cluster"
+    cluster = "cluster-2"
     mode = "crd"
     metrics_bind_addr = "0"
 
@@ -267,7 +260,7 @@ data:
         }
         # NOTE: Change with your domain and spire server node
         federates_with "foo.com" {
-          bundle_endpoint_url = "https://<spire_server_node_foo>:30010"
+          bundle_endpoint_url = "https://<spire_bundle_endpoint_foo>:8443"
           bundle_endpoint_profile "https_spiffe" {
             endpoint_spiffe_id = "spiffe://foo.com/spire/server"
           }
@@ -287,7 +280,7 @@ data:
         plugin_data {
           clusters = {
             # NOTE: Change this to your cluster name
-            "bar-eks-cluster" = {
+            "cluster-2" = {
               use_token_review_api_validation = true
               service_account_allow_list = ["spire:spire-agent"]
             }
@@ -347,83 +340,76 @@ spec:
         app: spire-server
     spec:
       serviceAccountName: spire-server
-      tolerations:
-        - key: "dedicated"
-          operator: "Equal"
-          value: "spire-server"
-          effect: "NoExecute"
-      nodeSelector:
-        dedicated: spire-server
       shareProcessNamespace: true
       containers:
-        - name: spire-server
-          image: gcr.io/spiffe-io/spire-server:1.5.1
-          args:
-            - -config
-            - /run/spire/config/server.conf
-          livenessProbe:
-            httpGet:
-              path: /live
-              port: 8080
-            failureThreshold: 2
-            initialDelaySeconds: 15
-            periodSeconds: 60
-            timeoutSeconds: 3
-          readinessProbe:
-            httpGet:
-              path: /ready
-              port: 8080
-            initialDelaySeconds: 5
-            periodSeconds: 5
-          ports:
-            - containerPort: 8081
-          volumeMounts:
-            - name: spire-config
-              mountPath: /run/spire/config
-              readOnly: true
-            - name: spire-data
-              mountPath: /run/spire/data
-              readOnly: false
-            - name: spire-registration-socket
-              mountPath: /run/spire/sockets
-              readOnly: false
-        - name: k8s-workload-registrar
-          image: gcr.io/spiffe-io/k8s-workload-registrar:1.5.1
-          args:
-            - -config
-            - /run/spire/config/k8s-workload-registrar.conf
-          ports:
-            - containerPort: 9443
-              name: webhook
-              protocol: TCP
-          volumeMounts:
-            - mountPath: /run/spire/config
-              name: k8s-workload-registrar-config
-              readOnly: true
-            - name: spire-registration-socket
-              mountPath: /run/spire/sockets
-              readOnly: true
-      volumes:
+      - name: spire-server
+        image: gcr.io/spiffe-io/spire-server:1.5.1
+        args:
+        - -config
+        - /run/spire/config/server.conf
+        livenessProbe:
+          httpGet:
+            path: /live
+            port: 8080
+          failureThreshold: 2
+          initialDelaySeconds: 15
+          periodSeconds: 60
+          timeoutSeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        ports:
+        - containerPort: 8081
+        volumeMounts:
         - name: spire-config
-          configMap:
-            name: spire-server
-        - name: k8s-workload-registrar-config
-          configMap:
-            name: k8s-workload-registrar
+          mountPath: /run/spire/config
+          readOnly: true
+        - name: spire-data
+          mountPath: /run/spire/data
+          readOnly: false
         - name: spire-registration-socket
-          hostPath:
-            path: /run/spire/server-sockets
-            type: DirectoryOrCreate
+          mountPath: /run/spire/sockets
+          readOnly: false
+      - name: k8s-workload-registrar
+        image: gcr.io/spiffe-io/k8s-workload-registrar:1.5.1
+        args:
+        - -config
+        - /run/spire/config/k8s-workload-registrar.conf
+        ports:
+        - containerPort: 9443
+          name: webhook
+          protocol: TCP
+        volumeMounts:
+        - mountPath: /run/spire/config
+          name: k8s-workload-registrar-config
+          readOnly: true
+        - name: spire-registration-socket
+          mountPath: /run/spire/sockets
+          readOnly: true
+      volumes:
+      - name: spire-config
+        configMap:
+          name: spire-server
+      - name: k8s-workload-registrar-config
+        configMap:
+          name: k8s-workload-registrar
+      - name: spire-registration-socket
+        hostPath:
+          path: /run/spire/server-sockets
+          type: DirectoryOrCreate
   volumeClaimTemplates:
-    - metadata:
-        name: spire-data
-        namespace: spire
-      spec:
-        accessModes:
-          - ReadWriteOnce
-        resources:
-          requests:
-            storage: 1Gi
+  - metadata:
+      name: spire-data
+      namespace: spire
+    spec:
+      accessModes:
+      - ReadWriteOnce
+      resources:
+        requests:
+          storage: 1Gi
 
 ---
 # Service definition for SPIRE server defining the gRPC port.
@@ -435,10 +421,10 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - name: grpc
-      port: 8081
-      targetPort: 8081
-      protocol: TCP
+  - name: grpc
+    port: 8081
+    targetPort: 8081
+    protocol: TCP
   selector:
     app: spire-server
 
@@ -450,13 +436,11 @@ metadata:
   name: spire-server-bundle-endpoint
   namespace: spire
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-    - name: tcp-api
-      port: 8443
-      protocol: TCP
-      targetPort: 8443
-      nodePort: 30010
+  - name: tcp-api
+    port: 8443
+    protocol: TCP
   selector:
     app: spire-server
 
@@ -474,9 +458,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: spire-agent-cluster-role
 rules:
-  - apiGroups: [""]
-    resources: ["pods", "nodes", "nodes/proxy"]
-    verbs: ["get"]
+- apiGroups: [""]
+  resources: ["pods", "nodes", "nodes/proxy"]
+  verbs: ["get"]
 
 ---
 # Binds above cluster role to spire-agent service account
@@ -485,9 +469,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: spire-agent-cluster-role-binding
 subjects:
-  - kind: ServiceAccount
-    name: spire-agent
-    namespace: spire
+- kind: ServiceAccount
+  name: spire-agent
+  namespace: spire
 roleRef:
   kind: ClusterRole
   name: spire-agent-cluster-role
@@ -520,7 +504,7 @@ data:
       NodeAttestor "k8s_psat" {
         plugin_data {
           # NOTE: Change this to your cluster name
-          cluster = "bar-eks-cluster"
+          cluster = "cluster-2"
         }
       }
 
@@ -574,130 +558,111 @@ spec:
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
       serviceAccountName: spire-agent
-      tolerations:
-        - key: "dedicated"
-          operator: "Equal"
-          value: "spire-server"
-          effect: "NoExecute"
       initContainers:
-        - name: init
-          # This is a small image with wait-for-it, choose whatever image
-          # you prefer that waits for a service to be up. This image is built
-          # from https://github.com/lqhl/wait-for-it
-          image: gcr.io/spiffe-io/wait-for-it
-          args: ["-t", "30", "spire-server:8081"]
+      - name: init
+        # This is a small image with wait-for-it, choose whatever image
+        # you prefer that waits for a service to be up. This image is built
+        # from https://github.com/lqhl/wait-for-it
+        image: gcr.io/spiffe-io/wait-for-it
+        args: ["-t", "30", "spire-server:8081"]
       containers:
-        - name: spire-agent
-          image: gcr.io/spiffe-io/spire-agent:1.5.1
-          args: ["-config", "/run/spire/config/agent.conf"]
-          volumeMounts:
-            - name: spire-config
-              mountPath: /run/spire/config
-              readOnly: true
-            - name: spire-bundle
-              mountPath: /run/spire/bundle
-            - name: spire-agent-socket-dir
-              mountPath: /run/secrets/workload-spiffe-uds
-            - name: spire-token
-              mountPath: /var/run/secrets/tokens
-          livenessProbe:
-            httpGet:
-              path: /live
-              port: 8080
-            failureThreshold: 2
-            initialDelaySeconds: 15
-            periodSeconds: 60
-            timeoutSeconds: 3
-          readinessProbe:
-            httpGet:
-              path: /ready
-              port: 8080
-            initialDelaySeconds: 5
-            periodSeconds: 5
-        # This is the container which runs the SPIFFE CSI driver.
-        - name: spiffe-csi-driver
-          image: ghcr.io/spiffe/spiffe-csi-driver:0.2.3
-          imagePullPolicy: IfNotPresent
-          args:
-            [
-              "-node-id",
-              "CSI_NODE",
-              "-workload-api-socket-dir",
-              "/spire-agent-socket",
-              "-csi-socket-path",
-              "/spiffe-csi/csi.sock",
-            ]
-          volumeMounts:
-            # The volume containing the SPIRE agent socket. The SPIFFE CSI
-            # driver will mount this directory into containers.
-            - mountPath: /spire-agent-socket
-              name: spire-agent-socket-dir
-              readOnly: true
-            # The volume that will contain the CSI driver socket shared
-            # with the kubelet and the driver registrar.
-            - mountPath: /spiffe-csi
-              name: spiffe-csi-socket-dir
-            # The volume containing mount points for containers.
-            - mountPath: /var/lib/kubelet/pods
-              mountPropagation: Bidirectional
-              name: mountpoint-dir
-          securityContext:
-            privileged: true
-        # This container runs the CSI Node Driver Registrar which takes care
-        # of all the little details required to register a CSI driver with
-        # the kubelet.
-        - name: node-driver-registrar
-          image: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.8.0
-          imagePullPolicy: IfNotPresent
-          args:
-            [
-              "-csi-address",
-              "/spiffe-csi/csi.sock",
-              "-kubelet-registration-path",
-              "/var/lib/kubelet/plugins/csi.spiffe.io/csi.sock",
-            ]
-          volumeMounts:
-            # The registrar needs access to the SPIFFE CSI driver socket
-            - mountPath: /spiffe-csi
-              name: spiffe-csi-socket-dir
-            # The registrar needs access to the Kubelet plugin registration
-            # directory
-            - name: kubelet-plugin-registration-dir
-              mountPath: /registration
-      volumes:
+      - name: spire-agent
+        image: gcr.io/spiffe-io/spire-agent:1.5.1
+        args: ["-config", "/run/spire/config/agent.conf"]
+        volumeMounts:
         - name: spire-config
-          configMap:
-            name: spire-agent
+          mountPath: /run/spire/config
+          readOnly: true
         - name: spire-bundle
-          configMap:
-            name: trust-bundle
-        - name: spire-token
-          projected:
-            sources:
-              - serviceAccountToken:
-                  path: spire-agent
-                  expirationSeconds: 7200
-                  audience: spire-server
-        # This volume is used to share the workload api socket between the
-        # CSI driver and SPIRE agent
+          mountPath: /run/spire/bundle
         - name: spire-agent-socket-dir
-          #emptyDir: {}
-          hostPath:
-            path: /run/spire/socket-dir
-            type: DirectoryOrCreate
-        # This volume is where the socket for kubelet->driver communication lives
-        - name: spiffe-csi-socket-dir
-          hostPath:
-            path: /var/lib/kubelet/plugins/csi.spiffe.io
-            type: DirectoryOrCreate
-        # This volume is where the SPIFFE CSI driver mounts volumes
-        - name: mountpoint-dir
-          hostPath:
-            path: /var/lib/kubelet/pods
-            type: Directory
-        # This volume is where the node-driver-registrar registers the plugin
-        # with kubelet
+          mountPath: /run/secrets/workload-spiffe-uds
+        - name: spire-token
+          mountPath: /var/run/secrets/tokens
+        livenessProbe:
+          httpGet:
+            path: /live
+            port: 8080
+          failureThreshold: 2
+          initialDelaySeconds: 15
+          periodSeconds: 60
+          timeoutSeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+      # This is the container which runs the SPIFFE CSI driver.
+      - name: spiffe-csi-driver
+        image: ghcr.io/spiffe/spiffe-csi-driver:0.2.3
+        imagePullPolicy: IfNotPresent
+        args: ["-node-id", "CSI_NODE", "-workload-api-socket-dir", "/spire-agent-socket", "-csi-socket-path", "/spiffe-csi/csi.sock"]
+        volumeMounts:
+        # The volume containing the SPIRE agent socket. The SPIFFE CSI
+        # driver will mount this directory into containers.
+        - mountPath: /spire-agent-socket
+          name: spire-agent-socket-dir
+          readOnly: true
+        # The volume that will contain the CSI driver socket shared
+        # with the kubelet and the driver registrar.
+        - mountPath: /spiffe-csi
+          name: spiffe-csi-socket-dir
+        # The volume containing mount points for containers.
+        - mountPath: /var/lib/kubelet/pods
+          mountPropagation: Bidirectional
+          name: mountpoint-dir
+        securityContext:
+          privileged: true
+      # This container runs the CSI Node Driver Registrar which takes care
+      # of all the little details required to register a CSI driver with
+      # the kubelet.
+      - name: node-driver-registrar
+        image: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.8.0
+        imagePullPolicy: IfNotPresent
+        args: ["-csi-address", "/spiffe-csi/csi.sock", "-kubelet-registration-path", "/var/lib/kubelet/plugins/csi.spiffe.io/csi.sock"]
+        volumeMounts:
+        # The registrar needs access to the SPIFFE CSI driver socket
+        - mountPath: /spiffe-csi
+          name: spiffe-csi-socket-dir
+        # The registrar needs access to the Kubelet plugin registration
+        # directory
         - name: kubelet-plugin-registration-dir
-          hostPath:
-            path: /var/lib/kubelet/plugins_registry
-            type: Directory
+          mountPath: /registration
+      volumes:
+      - name: spire-config
+        configMap:
+          name: spire-agent
+      - name: spire-bundle
+        configMap:
+          name: trust-bundle
+      - name: spire-token
+        projected:
+          sources:
+          - serviceAccountToken:
+              path: spire-agent
+              expirationSeconds: 7200
+              audience: spire-server
+      # This volume is used to share the workload api socket between the
+      # CSI driver and SPIRE agent
+      - name: spire-agent-socket-dir
+        #emptyDir: {}
+        hostPath:
+          path: /run/spire/socket-dir
+          type: DirectoryOrCreate
+      # This volume is where the socket for kubelet->driver communication lives
+      - name: spiffe-csi-socket-dir
+        hostPath:
+          path: /var/lib/kubelet/plugins/csi.spiffe.io
+          type: DirectoryOrCreate
+      # This volume is where the SPIFFE CSI driver mounts volumes
+      - name: mountpoint-dir
+        hostPath:
+          path: /var/lib/kubelet/pods
+          type: Directory
+      # This volume is where the node-driver-registrar registers the plugin
+      # with kubelet
+      - name: kubelet-plugin-registration-dir
+        hostPath:
+          path: /var/lib/kubelet/plugins_registry
+          type: Directory
