chore: Enable basic DNS proxying in Istio configuration files

--- a/istio/bar-istio-conf.yaml
+++ b/istio/bar-istio-conf.yaml
@@ -8,6 +8,10 @@ spec:
     trustDomain: bar.com
     trustDomainAliases:
     - foo.com
+    defaultConfig:
+      proxyMetadata:
+        # Enable basic DNS proxying
+        ISTIO_META_DNS_CAPTURE: "true"
   values:
     global:
       meshID: multi-mesh
