--- a/istio/foo-istio-conf.yaml
+++ b/istio/foo-istio-conf.yaml
@@ -8,6 +8,10 @@ spec:
     trustDomain: foo.com
     trustDomainAliases:
     - bar.com
+    defaultConfig:
+      proxyMetadata:
+        # Enable basic DNS proxying
+        ISTIO_META_DNS_CAPTURE: "true"
   values:
     global:
       meshID: multi-mesh
